Fix scheduler cells vertical alignment in the Material themes

--- a/styles/web/kendo.common-material.core.less
+++ b/styles/web/kendo.common-material.core.less
@@ -557,10 +557,6 @@ div.editorToolbarWindow.k-window-content {
     padding: 0.357em .167em 0.357em .8em;
 }
 
-.k-scheduler-table td {
-	vertical-align: middle;
-}
-
 .k-scheduler-table td,
 .k-scheduler-table th
 {
